--- a/src/main/resources/templates/report-template.html
+++ b/src/main/resources/templates/report-template.html
@@ -132,7 +132,8 @@
                 <tr class="report-header">
                     <td class="report-header-logo">
                         <!--            <img height="90px" src="./adria-logo.png" />-->
-                        <img height="75px" src="https://adria-bt.com/wp-content/uploads/2018/10/Adria-logo.png"/>
+<!--                        <img height="75px" src="https://adria-bt.com/wp-content/uploads/2018/10/Adria-logo.png"/>-->
+                        <img height="75px" src="src/main/resources/static/adria-logo.png">
                     </td>
                     <td class="report-header-date">
                         <div>Date :</div>
@@ -222,8 +223,8 @@
                 <tr class="report-header">
                     <td class="report-header-logo">
                         <!--            <img height="90px" src="./adria-logo.png" />-->
-                        <img height="90px" src="https://adria-bt.com/wp-content/uploads/2018/10/Adria-logo.png"/>
-                    </td>
+<!--                        <img height="90px" src="https://adria-bt.com/wp-content/uploads/2018/10/Adria-logo.png"/>-->
+                        <img height="75px" src="src/main/resources/static/adria-logo.png"></td>
                     <td class="report-header-date">
                         <div>Date :</div>
                         <div>21-08-2022</div>
