--- a/src/main/resources/templates/report-all-template.html
+++ b/src/main/resources/templates/report-all-template.html
@@ -7,7 +7,7 @@
     <!--    <link th:href="@{static/report.css}" rel="stylesheet"/>-->
     <style>
         body {
-            font-family: sans-serif;
+            font-family: monospace;
         }
 
         .table {
@@ -47,7 +47,7 @@
         .table-header {
             background-color: rgba(249, 106, 44, 1);
             font-size: 35px;
-            padding: 15px;
+            padding: 11px;
             color: white;
             border-color: rgb(183, 183, 182);
             border-style: solid;
@@ -57,10 +57,15 @@
 
         .table-content {
             /*background-color: rgba(255, 237, 221, 1);*/
+            font-family: Arial,sans-serif;
+        }
+
+        .table-content-client {
+            font-family: monospace;
         }
 
         .report-header-logo {
-            width: 595px;
+            width: 575px;
         }
 
         .table-column-info {
@@ -79,6 +84,19 @@
             margin-bottom: 30px;
         }
 
+        .table-column-name {
+            font-size: 15px;
+            font-weight: bold;
+        }
+
+        .table-column-value {
+            font-size: 15px;
+        }
+
+        .report-header-date {
+            text-align: right;
+        }
+
     </style>
 </head>
 
@@ -89,7 +107,8 @@
             <table>
                 <tr class="report-header">
                     <td class="report-header-logo">
-                        <img height="75px" src="https://adria-bt.com/wp-content/uploads/2018/10/Adria-logo.png"/>
+<!--                        <img height="75px" src="https://adria-bt.com/wp-content/uploads/2018/10/Adria-logo.png"/>-->
+                        <img height="75px" src="src/main/resources/static/adria-logo.png">
                     </td>
                     <td class="report-header-date">
                         <div>Date :</div>
@@ -102,7 +121,7 @@
                 <div class="table-header">
                     Client
                 </div>
-                <table class="table-content">
+                <table class="table-content-client">
                     <tr class="table-row">
                         <td class="table-column-info">
                             <div class="table-column-name">Nom Complet</div>
