Infos Transaction & pdf report

--- a/src/main/resources/templates/report-template.html
+++ b/src/main/resources/templates/report-template.html
@@ -16,8 +16,8 @@
 
         .table {
             box-shadow: 0 3px 9px 0 rgb(0, 0, 0);
-            margin-top: 25px;
-            margin-bottom: 25px;
+            margin-top: 9px;
+            margin-bottom: 9px;
 
             border-color: rgb(183, 183, 182);
             border-style: solid;
@@ -25,7 +25,7 @@
         }
 
         .page {
-            height: 1000px;
+            /*height: 1000px;*/
         }
 
         .table-row {
@@ -37,7 +37,7 @@
 
         .table-column {
             text-align: left;
-            padding: 25px;
+            padding: 9px 18px 9px 9px;
             width: 1000px;
             font-family: Arial,monospace;
         }
@@ -48,8 +48,8 @@
         .table-header {
             background-color: rgba(249, 106, 44, 1);
             /*background-color: rgba(255, 237, 221, 1);*/
-            font-size: 30px;
-            padding: 11px;
+            font-size: 18px;
+            padding: 7px;
             /*border-bottom: 1px solid rgba(143, 143, 143, 0.3);*/
             /*border-color: black;*/
             /*border-style: solid;*/
@@ -62,12 +62,12 @@
         }
 
         .table-column-name {
-            font-size: 15px;
+            font-size: 12px;
             font-weight: bold;
         }
 
         .table-column-value {
-            font-size: 15px;
+            font-size: 12px;
         }
 
         .table-content {
@@ -75,7 +75,7 @@
         }
 
         .report-header-logo {
-            width: 575px;
+            width: 615px;
         }
 
         .table-num-page {
@@ -90,15 +90,16 @@
             text-align: right;
             /*background-color: antiquewhite;*/
             font-family: Arial,monospace;
+            font-size: 12px;
         }
 
         .report-name {
             width: 100%;
             text-align: center;
-            font-size: 40px;
+            font-size: 24px;
             font-family: Arial,monospace;
-            margin-top: 30px;
-            margin-bottom: 30px;
+            margin-top: 15px;
+            margin-bottom: 15px;
         }
     </style>
 </head>
@@ -133,7 +134,7 @@
                     <td class="report-header-logo">
                         <!--            <img height="90px" src="./adria-logo.png" />-->
 <!--                        <img height="75px" src="https://adria-bt.com/wp-content/uploads/2018/10/Adria-logo.png"/>-->
-                        <img height="75px" src="src/main/resources/static/adria-logo.png">
+                        <img height="45px" src="src/main/resources/static/adria-logo.png">
                     </td>
                     <td class="report-header-date">
                         <div>Date :</div>
@@ -217,20 +218,20 @@
                 </table>
             </div>
         </div>
-        <div class="table-num-page">page 1</div>
+<!--        <div class="table-num-page">page 1</div>-->
         <div class="page">
-            <table>
-                <tr class="report-header">
-                    <td class="report-header-logo">
-                        <!--            <img height="90px" src="./adria-logo.png" />-->
-<!--                        <img height="90px" src="https://adria-bt.com/wp-content/uploads/2018/10/Adria-logo.png"/>-->
-                        <img height="75px" src="src/main/resources/static/adria-logo.png"></td>
-                    <td class="report-header-date">
-                        <div>Date :</div>
-                        <div>21-08-2022</div>
-                    </td>
-                </tr>
-            </table>
+<!--            <table>-->
+<!--                <tr class="report-header">-->
+<!--                    <td class="report-header-logo">-->
+<!--                        &lt;!&ndash;            <img height="90px" src="./adria-logo.png" />&ndash;&gt;-->
+<!--&lt;!&ndash;                        <img height="90px" src="https://adria-bt.com/wp-content/uploads/2018/10/Adria-logo.png"/>&ndash;&gt;-->
+<!--                        <img height="75px" src="src/main/resources/static/adria-logo.png"></td>-->
+<!--                    <td class="report-header-date">-->
+<!--                        <div>Date :</div>-->
+<!--                        <div>21-08-2022</div>-->
+<!--                    </td>-->
+<!--                </tr>-->
+<!--            </table>-->
             <div class="table">
                 <div class="table-header">
                     Bénéficiaire
@@ -313,7 +314,7 @@
                 </table>
             </div>
         </div>
-        <div class="table-num-page">page 2</div>
+<!--        <div class="table-num-page">page 1</div>-->
     </div>
     <!-- <img src="./2.svg"/> -->
     <div>
